WindGroup Dev/src/objects/Carpark_transaction__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Carpark transactions</relationshipLabel>
        <relationshipName>Carpark_transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Car_s__c</fullName>
        <label>Total Car(s)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Carpark transaction</label>
    <nameField>
        <label>Carpark transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carpark transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>